// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkStarRating should render correctly if you give it more than the max rating allowed 1`] = `
<div
  aria-label="Rated 7 out of 5 stars"
  className="bpk-star-rating"
>
  <withRtlSupport(BpkStar)
    className={null}
    key="star-1"
    large={false}
    type="full"
  />
  <withRtlSupport(BpkStar)
    className={null}
    key="star-2"
    large={false}
    type="full"
  />
  <withRtlSupport(BpkStar)
    className={null}
    key="star-3"
    large={false}
    type="full"
  />
  <withRtlSupport(BpkStar)
    className={null}
    key="star-4"
    large={false}
    type="full"
  />
  <withRtlSupport(BpkStar)
    className={null}
    key="star-5"
    large={false}
    type="full"
  />
</div>
`;

exports[`BpkStarRating should render correctly with "large" attribute 1`] = `
<div
  aria-label="Rated 5 out of 5 stars"
  className="bpk-star-rating"
>
  <withRtlSupport(BpkStar)
    className={null}
    key="star-1"
    large={true}
    type="full"
  />
  <withRtlSupport(BpkStar)
    className={null}
    key="star-2"
    large={true}
    type="full"
  />
  <withRtlSupport(BpkStar)
    className={null}
    key="star-3"
    large={true}
    type="full"
  />
  <withRtlSupport(BpkStar)
    className={null}
    key="star-4"
    large={true}
    type="full"
  />
  <withRtlSupport(BpkStar)
    className={null}
    key="star-5"
    large={true}
    type="full"
  />
</div>
`;

exports[`BpkStarRating should render correctly with "maxRating" attribute 1`] = `
<div
  aria-label="Rated 5 out of 8 stars"
  className="bpk-star-rating"
>
  <withRtlSupport(BpkStar)
    className={null}
    key="star-1"
    large={false}
    type="full"
  />
  <withRtlSupport(BpkStar)
    className={null}
    key="star-2"
    large={false}
    type="full"
  />
  <withRtlSupport(BpkStar)
    className={null}
    key="star-3"
    large={false}
    type="full"
  />
  <withRtlSupport(BpkStar)
    className={null}
    key="star-4"
    large={false}
    type="full"
  />
  <withRtlSupport(BpkStar)
    className={null}
    key="star-5"
    large={false}
    type="full"
  />
  <withRtlSupport(BpkStar)
    className={null}
    key="star-6"
    large={false}
    type="empty"
  />
  <withRtlSupport(BpkStar)
    className={null}
    key="star-7"
    large={false}
    type="empty"
  />
  <withRtlSupport(BpkStar)
    className={null}
    key="star-8"
    large={false}
    type="empty"
  />
</div>
`;

exports[`BpkStarRating should render correctly with 0 stars 1`] = `
<div
  aria-label="Rated 0 out of 5 stars"
  className="bpk-star-rating"
>
  <withRtlSupport(BpkStar)
    className={null}
    key="star-1"
    large={false}
    type="empty"
  />
  <withRtlSupport(BpkStar)
    className={null}
    key="star-2"
    large={false}
    type="empty"
  />
  <withRtlSupport(BpkStar)
    className={null}
    key="star-3"
    large={false}
    type="empty"
  />
  <withRtlSupport(BpkStar)
    className={null}
    key="star-4"
    large={false}
    type="empty"
  />
  <withRtlSupport(BpkStar)
    className={null}
    key="star-5"
    large={false}
    type="empty"
  />
</div>
`;

exports[`BpkStarRating should render correctly with 3 stars 1`] = `
<div
  aria-label="Rated 3 out of 5 stars"
  className="bpk-star-rating"
>
  <withRtlSupport(BpkStar)
    className={null}
    key="star-1"
    large={false}
    type="full"
  />
  <withRtlSupport(BpkStar)
    className={null}
    key="star-2"
    large={false}
    type="full"
  />
  <withRtlSupport(BpkStar)
    className={null}
    key="star-3"
    large={false}
    type="full"
  />
  <withRtlSupport(BpkStar)
    className={null}
    key="star-4"
    large={false}
    type="empty"
  />
  <withRtlSupport(BpkStar)
    className={null}
    key="star-5"
    large={false}
    type="empty"
  />
</div>
`;

exports[`BpkStarRating should render correctly with 3.5 stars 1`] = `
<div
  aria-label="Rated 3.5 out of 5 stars"
  className="bpk-star-rating"
>
  <withRtlSupport(BpkStar)
    className={null}
    key="star-1"
    large={false}
    type="full"
  />
  <withRtlSupport(BpkStar)
    className={null}
    key="star-2"
    large={false}
    type="full"
  />
  <withRtlSupport(BpkStar)
    className={null}
    key="star-3"
    large={false}
    type="full"
  />
  <withRtlSupport(BpkStar)
    className={null}
    key="star-4"
    large={false}
    type="half"
  />
  <withRtlSupport(BpkStar)
    className={null}
    key="star-5"
    large={false}
    type="empty"
  />
</div>
`;

exports[`BpkStarRating should render correctly with 5 stars 1`] = `
<div
  aria-label="Rated 5 out of 5 stars"
  className="bpk-star-rating"
>
  <withRtlSupport(BpkStar)
    className={null}
    key="star-1"
    large={false}
    type="full"
  />
  <withRtlSupport(BpkStar)
    className={null}
    key="star-2"
    large={false}
    type="full"
  />
  <withRtlSupport(BpkStar)
    className={null}
    key="star-3"
    large={false}
    type="full"
  />
  <withRtlSupport(BpkStar)
    className={null}
    key="star-4"
    large={false}
    type="full"
  />
  <withRtlSupport(BpkStar)
    className={null}
    key="star-5"
    large={false}
    type="full"
  />
</div>
`;
